--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 
                 Mi principal experiencia es en desarrollo front-end pero también tengo pasión por el diseño. Dado que producir un sitio web moderno requiere la combinación de diseño, tecnología de servidor y la capa con la que interactúan los usuarios, creo que tener experiencia tanto en diseño como en desarrollo permite lograr experiencias de usuario óptimas.</p>
             <p>Sigo capasitandome dia a dia para seguir aprendiendo y mejorar en mi campo</p>
-            <a href="#">Descargar CV</a>
+            <a href="CV.pdf">Descargar CV</a>
         </div>
     </section>
 
