--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <p class="bienvenida"><span class="machine">Bienvenidos</span></p>
                 <h2>Soy <span>Luciano Moreyra</span>, Desarrollador Web</h2>
                 <p class="descripcion">Realizamos sitios web dinamicos , modernos e intuitivos para ayudar a potenciar cualquier empresa o marca personal </p>
-                <a href="#portfolio">Ir a Portafolio</a>
+                <a href="#portfolio">Ir a Proyectos</a>
             </div>
         </div>
     </section>
