--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
                 <div class="overlay"></div>
                 <img src="img/proyecto1.jpg" alt="">
                 <div class="info">
-                    <h4>Sitiobrealizado con Wordpress</h4>
-                    <a href="https://elrecreodecolon.com/" target="_blank"><p>Ver pagina</p></a> 
+                    <h4>Sitio realizado con Wordpress</h4>
+                    <a href="https://elrecreodecolon.com/" target="_blank"><p class="enlace">Ver pagina</p></a> 
                 </div>
             </div>
             <div class="proyecto">
