--- a/index.html
+++ b/index.html
@@ -206,7 +206,10 @@
                 <div class="overlay"></div>
                 <img src="img/proyecto2.jpg" alt="">
                 <div class="info">
-                    <h4>Descripcion Proyecto</h4>
+                    <h4>Demo de web </h4>
+                    
+                    <a href="https://wedemo1school.netlify.app" target="_blank"><p class="enlace">Ver pagina</p></a> 
+
                     <p>Diseño Web</p>
                 </div>
             </div>
