--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     
                     <a href="https://wedemo1school.netlify.app" target="_blank"><p class="enlace">Ver pagina</p></a> 
 
-                    <p>Diseño Web</p>
+                    
                 </div>
             </div>
             <div class="proyecto">
@@ -218,7 +218,7 @@
                 <img src="img/proyecto3.jpg" alt="">
                 <div class="info">
                     <h4>Descripcion Proyecto</h4>
-                    <p>Diseño Web</p>
+                    <a href="https://app.netlify.com/sites/wabisabi-demo/overview" target="_blank"><p class="enlace">Ver pagina</p></a> 
                 </div>
             </div>
         </div>
